# RESTClient2

./: CMakeLists.txt  README.mkd
cmake/: dependencies.cmake
experiments/: .zlib.cpp.swp  CMakeLists.txt  zlib.cpp
src/: CMakeLists.txt  logging.cpp  logging.hpp  pimpl.hpp  rest.hpp  test_cloud_files_upload.cpp  test_url_parser.cpp  url_parser.cpp  url_parser.hpp
src/eventloop/: CMakeLists.txt  README
src/example/: CMakeLists.txt  main.cpp
src/http/: BodyDecoders.cpp  BodyDecoders.hpp  CMakeLists.txt  ConnectionPool.cpp  ConnectionPool.hpp  Headers.hpp  ReadResponse.cpp  ReadResponse.hpp  Request.cpp  Request.hpp  Response.hpp  interface.cpp  interface.hpp  io_source_chunked.cpp  io_source_chunked.hpp  io_source_tcpip.hpp  sendBody.hpp  test_cloud_files_upload.cpp  test_request.cpp  test_url.cpp  url.cpp  url.hpp
src/tcpip/: CMakeLists.txt  Connection.cpp  Connection.hpp  Exceptions.hpp  Services.cpp  Services.hpp  SpyGuard.hpp  interface.cpp  interface.hpp  test_tcpip.cpp
